ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testproj-ingress
  namespace: testproj
spec:
  ingressClassName: traefik
  rules:
    - host: testproj.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testproj-active
                port:
                  number: 80
